# txt_writer

./: Cargo.toml  README.md
src/: data.txt  lib.rs  main.rs  read.rs  write.rs
