[package]
name = "txt_writer"
version = "0.1.4"
edition = "2021"
description = "Easier and faster way to write txt files in rust"
license = "MIT"
repository = "https://github.com/carghai/txt_writer"
homepage = "https://carghaiwebsite.web.app/#/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3